--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <h1 class="project-name">Cursea.net</h1>
       <h2 class="project-tagline">Red de cursos online para ingenieros y científicos</h2>
       <h4 class="project-tagline">Accede ahora a nuestros cursos online 100% gratuitos:</h4>
-      <h5 class="project-tagline">Programación, cálculo numérico, optimización...</h5>
+      <h4 class="project-tagline">Programación, cálculo numérico, optimización...</h4>
       <a href="http://cacheme.org/curso-online-python-cientifico-ingenieros" class="btn">Python</a>
       <a href="http://cacheme.org/curso-simulacion-procesos-quimicos-coco-simulator/" class="btn">Simulación de procesos químicos</a>
       <a href="https://www.youtube.com/playlist?list=PLGBbVX_WvN7ZhPW_A90iORZVL1yoqAQ4W" class="btn">Optimización (GAMS®)</a>
-      <a href="http://cacheme.org/formacion/manual-xcos/" class="btn">Scilab - XCOS (~Simulink®)</a>
+      <a href="http://cacheme.org/formacion/manual-xcos/" class="btn">Scilab | XCOS (~Simulink®)</a>
     </section>
 
     <section class="main-content">
