--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Cursea.net - Red de cursos online </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="lX25C1OrNL2iY54orwUw-GDSZXksV6zqfJOv7912SjE" />
+    <meta name="google-site-verification" content="lX25C1OrNL2iY54orwUw-GDSZXksV6zqfJOv7912SjE" />
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
